# package_pdf2anki

./: .gitignore  .gptignore  BUILD.md  CROPPING.md  DEV_GENANKI_FEATURES.md  FAQ.md  JUDGE.md  LICENSE.txt  NOTICE  NOTICE.txt  README.md  SUPERLAZYMODE_PLAN.md  allfiles.txt  process_folder.py  pyproject.toml  setup.py  subfolders_to_text.py
pdf2anki/: .gptignore  __init__.py  __main__.py  core.py  pdf2pic.py  perf_tuner.py  pic2text.py  text2anki.py
pdf2anki.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
pdf2anki/text2anki/: __init__.py  apkg_exporter.py  card.py  console_utils.py  database_manager.py  dedup.py  forensic_logger.py  guided_wizard.py  lazy_runner.py  llm_discovery.py  llm_helper.py  material_manager.py  pipeline_state.py  pipeline_trace.py  project_config.py  prompt_updater.py  text_ingester.py  workflow_manager.py
tests/: conftest.py  test_apkg_exporter.py  test_card.py  test_console_utils.py  test_core_config.py  test_database_manager.py  test_dedup.py  test_dedup_robustness.py  test_edge_cases.py  test_forensic_integration.py  test_forensic_logger.py  test_guided_wizard.py  test_lazy_runner.py  test_llm_discovery.py  test_llm_helper_conversation.py  test_llm_helper_decision.py  test_nonstandard_collection_keys.py  test_pdf2pic.py  test_perf_tuner.py  test_pic2text.py  test_pipeline_state.py  test_pipeline_trace.py  test_project_config.py  test_project_config_create_from_dict.py  test_real_data_and_sync.py  test_regression_e2e.py  test_specification.py  test_text2anki_init.py  test_text_ingester.py  test_workflow_manager_init.py
